fixed spacing between tiles

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 .container {
   position: relative;
   width: 312px;
-  top: 100px;
+  top: 312px;
   left: 50%;
   transform: translate(-50%);
   background-color: blue;
@@ -24,7 +24,8 @@
   height: 100px;
   text-align: center;
   line-height: 100px;
-  font-size: 4em;
+  font-family: "Bungee Outline", cursive;
+  font-size: 6em;
   background-color: red;
   border: black solid 1px;
   border-radius: 20%;
